--- a/org/2020-02-04-win10.org
+++ b/org/2020-02-04-win10.org
@@ -6,6 +6,8 @@
 - ctrl + x cut
 - alt
 * gesture shortcut
+* cygwin
+.\setup-x86_64.exe -q -P wget -P gcc-g++ -P make -P diffutils -P libmpfr-devel -P libgmp-devel -P libmpc-devel
 * 锯齿消除
 选中对应程序，右键属刑->兼容性->更改高dpi设置->勾选替代高dpi缩放为...
 * cmd
