--- a/org/2020-02-29-git.org
+++ b/org/2020-02-29-git.org
@@ -127,3 +127,4 @@ git push -u origin master
 标识每个git对象
 * genral
 git rm -r --cached .gradle // 剔除被误加入VCS的文件，-r递归
+git log --author="huangjie" --pretty=tformat: --numstat | awk '{ add += $1; subs += $2; loc += $1 - $2 } END { printf "added lines: %s, removed lines: %s, total lines: %s\n", add, subs, loc }' - //统计代码数量
