--- a/org/2019-10-19-idea.org
+++ b/org/2019-10-19-idea.org
@@ -21,8 +21,6 @@ pom添加
     <maven.compiler.source>1.9</maven.compiler.source>
     <maven.compiler.target>1.9</maven.compiler.target>
 </properties>
-** git bash
-terminal --> "C:\Program Files\Git\bin\bash.exe" --login -i
 * ideavim
 ** config
 let mapleader = ","   " leader is comma
@@ -99,3 +97,11 @@ http://jrebel.cicoding.cn/guid
 监听配置格式：
 
 http://jrebel.cicoding.cn/GUID
+* terminal
+** git bash
+terminal --> "C:\Program Files\Git\bin\bash.exe" --login -i
+** wsl
+"cmd.exe" /k "wsl.exe"
+* wsl
+https://github.com/yuk7/wsldl
+https://github.com/VPraharsha03/GentooWSL2
